frontend.log

> frontend@0.1.0 start
> react-scripts start

(node:49714) [DEP_WEBPACK_DEV_SERVER_ON_AFTER_SETUP_MIDDLEWARE] DeprecationWarning: 'onAfterSetupMiddleware' option is deprecated. Please use the 'setupMiddlewares' option.
(Use `node --trace-deprecation ...` to show where the warning was created)
(node:49714) [DEP_WEBPACK_DEV_SERVER_ON_BEFORE_SETUP_MIDDLEWARE] DeprecationWarning: 'onBeforeSetupMiddleware' option is deprecated. Please use the 'setupMiddlewares' option.
Starting the development server...

Compiled successfully!

You can now view frontend in the browser.

  Local:            http://localhost:3000
  On Your Network:  http://192.168.1.3:3000

Note that the development build is not optimized.
To create a production build, use npm run build.

webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Failed to compile.

[eslint] 
src/Dashboard.js
Syntax error: Missing initializer in destructuring declaration. (79:7) (79:7)
ERROR in ./src/Dashboard.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /Users/user1/Documents/company/test_vhanit/frontend/src/Dashboard.js: Missing initializer in destructuring declaration. (79:7)

  77 |       }
  78 |     };
> 79 |   }, []); // Empty dependency array to run only once
     |        ^
  80 |
  81 |   const formatTime = (date) => {
  82 |     if (!date) return 'Never';
    at constructor (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:367:19)
    at FlowParserMixin.raise (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:6627:19)
    at FlowParserMixin.parseVar (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:13387:16)
    at FlowParserMixin.parseVarStatement (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:13230:10)
    at FlowParserMixin.parseStatementContent (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:12851:23)
    at FlowParserMixin.parseStatementLike (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:12767:17)
    at FlowParserMixin.parseStatementLike (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:2946:24)
    at FlowParserMixin.parseStatementListItem (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:12747:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:13316:61)
    at FlowParserMixin.parseBlockBody (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:13309:10)
    at FlowParserMixin.parseBlock (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:13297:10)
    at FlowParserMixin.parseFunctionBody (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:12101:24)
    at FlowParserMixin.parseFunctionBody (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:2923:11)
    at FlowParserMixin.parseFunctionBodyAndFinish (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:12087:10)
    at FlowParserMixin.parseFunctionBodyAndFinish (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:2931:18)
    at /Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:13445:12
    at FlowParserMixin.withSmartMixTopicForbiddingContext (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:12404:14)
    at FlowParserMixin.parseFunction (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:13444:10)
    at FlowParserMixin.parseFunctionStatement (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:13125:17)
    at FlowParserMixin.parseStatementContent (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:12791:21)
    at FlowParserMixin.parseStatementLike (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:12767:17)
    at FlowParserMixin.parseStatementLike (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:2946:24)
    at FlowParserMixin.parseModuleItem (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:12744:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:13316:36)
    at FlowParserMixin.parseBlockBody (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:13309:10)
    at FlowParserMixin.parseProgram (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:12625:10)
    at FlowParserMixin.parseTopLevel (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:12615:25)
    at FlowParserMixin.parseTopLevel (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:3715:28)
    at FlowParserMixin.parse (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:14492:10)
    at parse (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/parser/lib/index.js:14526:38)
    at parser (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/gensync/index.js:261:32)
    at /Users/user1/Documents/company/test_vhanit/frontend/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/Users/user1/Documents/company/test_vhanit/frontend/node_modules/gensync/index.js:223:11)

ERROR in [eslint] 
src/Dashboard.js
  Line 79:7:  Parsing error: Missing initializer in destructuring declaration. (79:7)

webpack compiled with 2 errors
Compiling...
Compiled with warnings.

[eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

WARNING in [eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

webpack compiled with 1 warning
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled with warnings.

[eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

WARNING in [eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

webpack compiled with 1 warning
Compiling...
Compiled with warnings.

[eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

WARNING in [eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

webpack compiled with 1 warning
Compiling...
Compiled with warnings.

[eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

WARNING in [eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

webpack compiled with 1 warning
Compiling...
Compiled with warnings.

[eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

WARNING in [eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

webpack compiled with 1 warning
Compiling...
Compiled with warnings.

[eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

WARNING in [eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

webpack compiled with 1 warning
Compiling...
Compiled with warnings.

[eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

Search for the keywords to learn more about each warning.
To ignore, add // eslint-disable-next-line to the line before.

WARNING in [eslint] 
src/Dashboard.js
  Line 13:9:  'restartConnection' is assigned a value but never used  no-unused-vars

webpack compiled with 1 warning
